# shorty

./: Cargo.toml  README.md  config.toml  flake.nix
src/: lib.rs  pbimg.rs  short.rs  upload.rs
