[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
tokio = { version = "1.17", features = ["rt", "macros", "fs"] }
gpw = "0.1"
uuid = { version = "0.8", features = ["v4"] }
mime_guess = "2.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "short"
path = "src/short.rs"

[[bin]]
name = "up"
path = "src/upload.rs"
