[package]
name = "shorty"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
arboard = "3.4"
bytes = "1.7"
image = "0.25"
hyper = "0.14"
hyper-tls = "0.5"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
tokio = { version = "1.17", features = ["rt", "macros", "fs", "io-std"] }
tokio-util = { version = "0.7", features = ["io"] }
gpw = "0.1"
uuid = { version = "1.3", features = ["v4"] }
mime_guess = "2.0"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
infer = "0.16"
futures-util = "0.3"

[[bin]]
name = "short"
path = "src/short.rs"

[[bin]]
name = "up"
path = "src/upload.rs"

[[bin]]
name = "pbimg"
path = "src/pbimg.rs"
